--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui5-mobile-app",
   "version": "0.0.1",
-  "description": "",
+  "description": "Using SAPUI5 to build mobile web app",
   "private": true,
   "devDependencies": {
     "@sap/grunt-sapui5-bestpractice-build": "^1.3.17"
