update device detection

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -109,7 +109,7 @@
 					"controlId": "mainPage"
 				},
 				"payment": {
-					"viewName": "payment.main",
+					"viewName": "payment.Main",
 					"controlAggregation": "content",
 					"controlId": "mainPage"
 				},
